# ap

./: .gitignore  AGENTS.md  BACKLOG.md  PROMPT.md  ralph.yml
.agents/scratchpad/implementation/ap-ai-coding-agent/: design.md  idea-honing.md  plan.md  progress.md  requirements.md  rough-idea.md  validation.md
.agents/scratchpad/implementation/ap-fp-refactor/: progress.md  validation.md
.monitor/: memory.md  state.json
.monitor/conflicts/: conversation-context-management.md  model-switching.md
.ralph/: current-events  current-loop-id  events-20260322-051046.jsonl  events-20260322-051145.jsonl  events-20260322-225134.jsonl  events-20260323-023444.jsonl  events-20260323-024329.jsonl  events-20260323-024432.jsonl  events-20260323-024535.jsonl  events-20260323-024638.jsonl  events-20260323-024742.jsonl  events-20260323-024845.jsonl  events-20260323-042829.jsonl  events-20260323-043126.jsonl  events-20260323-043438.jsonl  events-20260323-060051.jsonl  events-20260323-122545.jsonl  events-20260323-144422.jsonl  events-20260323-144617.jsonl  events-20260323-152113.jsonl  events.jsonl  history.jsonl
.ralph/agent/: handoff.md  memories.md  scratchpad.md  summary.md  tasks.jsonl
ap/: Cargo.toml  PROMPT.md  README.md  ap.toml.example
ap/.agents/scratchpad/implementation/ap-fp-refactor/: context.md  plan.md  progress.md
ap/.agents/scratchpad/implementation/ap-fp-refactor/research/: broken-windows.md  existing-patterns.md
ap/.agents/scratchpad/implementation/ap-fp-refactor/tasks/: task-01-core-types-and-registry-builder.code-task.md  task-02-pure-turn-function.code-task.md  task-03-middleware-chain-and-shell-bridge.code-task.md  task-04-session-persistence-conversation.code-task.md  task-05-main-recipe-style-and-headless.code-task.md  task-06-tui-decouple.code-task.md  task-07-delete-agentloop.code-task.md  task-08-readme-update.code-task.md  task-09-clippy-lint-suite.code-task.md
ap/src/: app.rs  config.rs  context.rs  lib.rs  main.rs  middleware.rs  turn.rs  types.rs
ap/src/discovery/: mod.rs
ap/src/extensions/: dylib_loader.rs  mod.rs  rhai_loader.rs
ap/src/hooks/: mod.rs  runner.rs
ap/src/provider/: bedrock.rs  mod.rs
ap/src/session/: mod.rs  store.rs
ap/src/skills/: mod.rs
ap/src/tools/: bash.rs  edit.rs  mod.rs  read.rs  shell.rs  write.rs
ap/src/tui/: events.rs  mod.rs  theme.rs  ui.rs
ap/tests/: agent_loop.rs  hook_cancel.rs  noninteractive.rs  skill_injection.rs
scripts/: ap-monitor.py  ap-ralph-watchdog.py
(+83 files in other folders)
